Fixed header alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,7 +13,7 @@ body {
   color: $text-01;
 }
 
-p, form {
+p, form {\
   line-height: 1.5;
   margin: 0 0 1rem;
   word-wrap: break-word;
@@ -215,6 +215,7 @@ header {
   @media screen and (min-width: 600px) {
     flex-flow: row;
     justify-content: space-between;
+    align-items: center;
   }
 }
 
